voter/voter.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    apps: voter
    type: "roost-example"
  name: voter
spec: 
  selector: 
    app: voter
    type: "roost-example"
  ports:
  - name: voter
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voter
      type: "roost-example"
  template:
    metadata:
      labels:
        app: voter
        type: "roost-example"
    spec:
      containers:
      - name: voter
        image: local-registry:5002/voter:latest
        stdin: true
        tty: true
        ports:
        - containerPort: 80
