voter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: voter
  namespace: default
spec:
  ingressClassName: nginx 
  rules:
  - host: "voter.10.10.0.10.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voter
            port:
              number: 80
